# eye-protector2

./: .gitignore  CMakeLists.txt  CMakeLists.txt.standalone  Main.qml  Notification.qml  README.md  RoundProgButton.qml  Setting.qml  TrayIcon.qml  compile_commands.json  controller.cpp  controller.h  eyetimer.cpp  eyetimer.h  main.cpp  main.qml  notification.cpp  notification.h  profile.txt  qml.qrc  timer.cpp  timer.h
.cache/clangd/index/: eyetimer.cpp.EE8FF8F9045A6945.idx  eyetimer.h.DF38D541E1BFE8E0.idx  main.cpp.CAE1346DD4F403DD.idx
package/: metadata.json
package/contents/config/: Setting.qml  main.xml
package/contents/ui/: Eyetimer.qml  Main_copy.qml  Notification.qml  RoundProgButton.qml  TrayIcon.qml  configGeneral.qml  main.qml
plugin/: CMakeLists.txt  extension.cpp  extension.h  eyetimer.cpp  eyetimer.h  qmldir
qml/: Main.qml  Notification.qml  RoundProgButton.qml  Setting.qml
src/: eyetimer.cpp  eyetimer.h  main.cpp
